--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Contact</title>
 
     <!-- Font Awesoeme kit -->
     <script src="https://kit.fontawesome.com/536a1a02a0.js" crossorigin="anonymous"></script>
@@ -15,6 +15,12 @@
     <!-- Navbar CSS -->
     <link rel="stylesheet" href="/css/navbar.css">
 
+    <!--Container CSS -->
+    <link rel="stylesheet" href="/css/container.css">
+
+    <!-- Stylesheet for this page -->
+    <link rel="stylesheet" href="/css/contact.css">
+
 </head>
 <body>
     <!--- NavBar -->
@@ -22,11 +28,11 @@
         <div class="logo">Kunwar Shaanjeet</div>
         <nav id="toggler">
             <ul>
-                <li><a href="/html/index.html" class="active"><i class="fas fa-home">  Home</i></a></li>
+                <li><a href="/html/index.html"><i class="fas fa-home">  Home</i></a></li>
                 <li><a href="/html/about.html"><i class="fas fa-address-card">  About</i></a></li>
                 <li><a href="/html/galler.html"><i class="fas fa-images"></i> Gallery</a></li>
                 <li><a href="/html/review.html"><i class="fas fa-table"></i>  Reviews</a></li>
-                <li><a href="/html/contact.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
+                <li><a href="/html/contact.html" class="active"><i class="fas fa-phone-alt">  Contact</i></a></li>
             </ul>
         </nav>
         <div class="menu-toggle" id="menu-toggler">
@@ -39,7 +45,31 @@
     <div onclick="goTop()" id="goTopButton">
         <i class="fas fa-arrow-up"></i>
     </div>
-        <!-- /Gotop button -->
+    <!-- /Gotop button -->
+
+    <!-- Main contact -->
+    <div class="container">
+        <h1>
+            Drop a message!
+        </h1>
+        <p>
+            Email: kunwar.shaanjeet@students.iiit.ac.in<br>
+            Address: #329, Bakul Nivas<br>
+            IIIT-Hyderbad, Gachibowli<br>
+            Telengana<br>
+        </p>
+    </div>
+    <!-- /Main contact -->
+
+    <!-- Social Media -->
+    <div class="social">
+        <ul>
+            <li><a href="#github"><i class="fab fa-github"></i></a></li>
+            <li><a href="#facebook"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#instagram"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+    </div>
+    <!-- /Social Media -->
 
     <!-- Star Background -->
     <div class="stars"></div>
