--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,8 @@
     <!-- Navbar CSS -->
     <link rel="stylesheet" href="/css/navbar.css">
 
-    <!-- Stylesheet for this page -->
-    <link rel="stylesheet" href="/css/main.css">
+    <!-- Container CSS -->
+    <link rel="stylesheet" href="/css/container.css">
 
 </head>
 <body>
@@ -26,8 +26,8 @@
         <nav id="toggler">
             <ul>
                 <li><a href="/html/index.html" class="active"><i class="fas fa-home">  Home</i></a></li>
-                <li><a href="/html/about.html"><i class="fas fa-images"></i>  Gallery</a></li>
-                <li><a href="/html/gallery.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
+                <li><a href="/html/about.html"><i class="fas fa-address-card">  About</i></a></li>
+                <li><a href="/html/galler.html"><i class="fas fa-images"></i> Gallery</a></li>
                 <li><a href="/html/review.html"><i class="fas fa-table"></i>  Reviews</a></li>
                 <li><a href="/html/contact.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
             </ul>
