--- a/html/contact.html
+++ b/html/contact.html
@@ -30,8 +30,8 @@
             <ul>
                 <li><a href="/html/index.html"><i class="fas fa-home">  Home</i></a></li>
                 <li><a href="/html/about.html"><i class="fas fa-address-card">  About</i></a></li>
-                <li><a href="/html/galler.html"><i class="fas fa-images"></i> Gallery</a></li>
-                <li><a href="/html/review.html"><i class="fas fa-table"></i>  Reviews</a></li>
+                <li><a href="/html/gallery.html"><i class="fas fa-images"> Gallery</i></a></li>
+                <li><a href="/html/review.html"><i class="fas fa-table">  Reviews</i></a></li>
                 <li><a href="/html/contact.html" class="active"><i class="fas fa-phone-alt">  Contact</i></a></li>
             </ul>
         </nav>
