--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>About</title>
 
     <!-- Font Awesoeme kit -->
     <script src="https://kit.fontawesome.com/536a1a02a0.js" crossorigin="anonymous"></script>
