--- a/html/contact.html
+++ b/html/contact.html
@@ -10,16 +10,16 @@
     <script src="https://kit.fontawesome.com/536a1a02a0.js" crossorigin="anonymous"></script>
 
     <!-- Background CSS -->
-    <link rel="stylesheet" href="/css/background.css">
+    <link rel="stylesheet" href="../css/background.css">
 
     <!-- Navbar CSS -->
-    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="../css/navbar.css">
 
     <!--Container CSS -->
-    <link rel="stylesheet" href="/css/container.css">
+    <link rel="stylesheet" href="../css/container.css">
 
     <!-- Stylesheet for this page -->
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="../css/contact.css">
 
 </head>
 <body>
@@ -28,11 +28,11 @@
         <div class="logo">Kunwar Shaanjeet</div>
         <nav id="toggler">
             <ul>
-                <li><a href="/html/index.html"><i class="fas fa-home">  Home</i></a></li>
-                <li><a href="/html/about.html"><i class="fas fa-address-card">  About</i></a></li>
-                <li><a href="/html/gallery.html"><i class="fas fa-images"> Gallery</i></a></li>
-                <li><a href="/html/review.html"><i class="fas fa-table">  Reviews</i></a></li>
-                <li><a href="/html/contact.html" class="active"><i class="fas fa-phone-alt">  Contact</i></a></li>
+                <li><a href="../html/index.html"><i class="fas fa-home">  Home</i></a></li>
+                <li><a href="../html/about.html"><i class="fas fa-address-card">  About</i></a></li>
+                <li><a href="../html/gallery.html"><i class="fas fa-images"> Gallery</i></a></li>
+                <li><a href="../html/review.html"><i class="fas fa-table">  Reviews</i></a></li>
+                <li><a href="../html/contact.html" class="active"><i class="fas fa-phone-alt">  Contact</i></a></li>
             </ul>
         </nav>
         <div class="menu-toggle" id="menu-toggler">
@@ -64,9 +64,9 @@
     <!-- Social Media -->
     <div class="social">
         <ul>
-            <li><a href="#github"><i class="fab fa-github"></i></a></li>
-            <li><a href="#facebook"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#instagram"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://github.com/groverkss" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.facebook.com/kunwarshaanjeetsingh.grover" target="_black"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/shaanjeet19/" target="_blank"><i class="fab fa-instagram"></i></a></li>
         </ul>
     </div>
     <!-- /Social Media -->
@@ -75,6 +75,6 @@
     <div class="stars"></div>
     <div class="twinkling"><div>
     <!-- Navbar JS -->
-    <script src="/js/navbar.js"></script>
+    <script src="../js/navbar.js"></script>
 </body>
 </html>
