--- a/html/gallery.html
+++ b/html/gallery.html
@@ -10,13 +10,13 @@
     <script src="https://kit.fontawesome.com/536a1a02a0.js" crossorigin="anonymous"></script>
 
     <!-- Background CSS -->
-    <link rel="stylesheet" href="/css/background.css">
+    <link rel="stylesheet" href="../css/background.css">
 
     <!-- Navbar CSS -->
-    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="../css/navbar.css">
 
     <!-- Gallery CSS -->
-    <link rel="stylesheet" href="/css/gallery.css">
+    <link rel="stylesheet" href="../css/gallery.css">
 
 </head>
 <body>
@@ -25,11 +25,11 @@
         <div class="logo">Kunwar Shaanjeet</div>
         <nav id="toggler">
             <ul>
-                <li><a href="/html/index.html"><i class="fas fa-home">  Home</i></a></li>
-                <li><a href="/html/about.html"><i class="fas fa-address-card">  About</i></a></li>
-                <li><a href="/html/gallery.html" class="active"><i class="fas fa-images"> Gallery</i></a></li>
-                <li><a href="/html/review.html"><i class="fas fa-table">  Reviews</i></a></li>
-                <li><a href="/html/contact.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
+                <li><a href="../html/index.html"><i class="fas fa-home">  Home</i></a></li>
+                <li><a href="../html/about.html"><i class="fas fa-address-card">  About</i></a></li>
+                <li><a href="../html/gallery.html" class="active"><i class="fas fa-images"> Gallery</i></a></li>
+                <li><a href="../html/review.html"><i class="fas fa-table">  Reviews</i></a></li>
+                <li><a href="../html/contact.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
             </ul>
         </nav>
         <div class="menu-toggle" id="menu-toggler">
@@ -58,31 +58,31 @@
     <div class="slideshow-container" onclick="plusSlides(1)">
         <div class="mySlides fade">
         <div class="numbertext">1 / 5</div>
-        <img src="/img/1.jpg" style="width:100%">
+        <img src="../img/1.jpg" style="width:100%">
         <div class="text"><3</div>
         </div>
     
         <div class="mySlides fade">
         <div class="numbertext">2 / 5</div>
-        <img src="/img/2.jpg" style="width:100%">
+        <img src="../img/2.jpg" style="width:100%">
         <div class="text">Mehul rethinking his life choices</div>
         </div>
     
         <div class="mySlides fade">
         <div class="numbertext">3 / 5</div>
-        <img src="/img/4.jpeg" style="width:100%">
+        <img src="../img/4.jpeg" style="width:100%">
         <div class="text">One half of residents of room 333</div>
         </div>
 
         <div class="mySlides fade">
         <div class="numbertext">4 / 5</div>
-        <img src="/img/3.jpg" style="width:100%">
+        <img src="../img/3.jpg" style="width:100%">
         <div class="text">Lohri 2020</div>
         </div>
 
         <div class="mySlides fade">
         <div class="numbertext">5 / 5</div>
-        <img src="/img/5.jpg" style="width:100%">
+        <img src="../img/5.jpg" style="width:100%">
         <div class="text">Rjo.jpg</div>
         </div>
     </div>
@@ -101,9 +101,9 @@
     <div class="stars"></div>
     <div class="twinkling"><div>
     <!-- Navbar JS -->
-    <script src="/js/navbar.js"></script>
+    <script src="../js/navbar.js"></script>
 
     <!-- Gallery JS -->
-    <script src="/js/gallery.js"></script>
+    <script src="../js/gallery.js"></script>
 </body>
 </html>
