--- a/html/review.html
+++ b/html/review.html
@@ -10,13 +10,13 @@
     <script src="https://kit.fontawesome.com/536a1a02a0.js" crossorigin="anonymous"></script>
 
     <!-- Background CSS -->
-    <link rel="stylesheet" href="/css/background.css">
+    <link rel="stylesheet" href="../css/background.css">
 
     <!-- Navbar CSS -->
-    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="../css/navbar.css">
 
     <!-- Form CSS -->
-    <link rel="stylesheet" href="/css/review.css">
+    <link rel="stylesheet" href="../css/review.css">
 </head>
 <body>
     <!--- NavBar -->
@@ -25,11 +25,11 @@
         <nav id="toggler">
             <ul>
                 <li onclick="revealMe()"><a href="#" id="reviewMe"><i class="fas fa-pencil-alt">  Review Me!</i></a></li>
-                <li><a href="/html/index.html"><i class="fas fa-home">  Home</i></a></li>
-                <li><a href="/html/about.html"><i class="fas fa-address-card">  About</i></a></li>
-                <li><a href="/html/gallery.html"><i class="fas fa-images"> Gallery</i></a></li>
-                <li><a href="/html/review.html" class="active"><i class="fas fa-table">  Reviews</i></a></li>
-                <li><a href="/html/contact.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
+                <li><a href="../html/index.html"><i class="fas fa-home">  Home</i></a></li>
+                <li><a href="../html/about.html"><i class="fas fa-address-card">  About</i></a></li>
+                <li><a href="../html/gallery.html"><i class="fas fa-images"> Gallery</i></a></li>
+                <li><a href="../html/review.html" class="active"><i class="fas fa-table">  Reviews</i></a></li>
+                <li><a href="../html/contact.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
             </ul>
         </nav>
         <div class="menu-toggle" id="menu-toggler">
@@ -81,8 +81,8 @@
     <div class="stars"></div>
     <div class="twinkling"><div>
     <!-- Navbar JS -->
-    <script src="/js/navbar.js"></script>
+    <script src="../js/navbar.js"></script>
     <!-- Review JS -->
-    <script src="/js/review.js"></script>
+    <script src="../js/review.js"></script>
 </body>
 </html>
