--- a/html/about.html
+++ b/html/about.html
@@ -10,13 +10,13 @@
     <script src="https://kit.fontawesome.com/536a1a02a0.js" crossorigin="anonymous"></script>
 
     <!-- Background CSS -->
-    <link rel="stylesheet" href="/css/background.css">
+    <link rel="stylesheet" href="../css/background.css">
 
     <!-- Navbar CSS -->
-    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="../css/navbar.css">
 
     <!-- Main styleheet for this page -->
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="../css/about.css">
 
 </head>
 <body>
@@ -25,11 +25,11 @@
         <div class="logo">Kunwar Shaanjeet</div>
         <nav id="toggler">
             <ul>
-                <li><a href="/html/index.html"><i class="fas fa-home">  Home</i></a></li>
-                <li><a href="/html/about.html" class="active"><i class="fas fa-address-card">  About</i></a></li>
-                <li><a href="/html/gallery.html"><i class="fas fa-images"> Gallery</i></a></li>
-                <li><a href="/html/review.html"><i class="fas fa-table">  Reviews</i></a></li>
-                <li><a href="/html/contact.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
+                <li><a href="../html/index.html"><i class="fas fa-home">  Home</i></a></li>
+                <li><a href="../html/about.html" class="active"><i class="fas fa-address-card">  About</i></a></li>
+                <li><a href="../html/gallery.html"><i class="fas fa-images"> Gallery</i></a></li>
+                <li><a href="../html/review.html"><i class="fas fa-table">  Reviews</i></a></li>
+                <li><a href="../html/contact.html"><i class="fas fa-phone-alt">  Contact</i></a></li>
             </ul>
         </nav>
         <div class="menu-toggle" id="menu-toggler">
@@ -92,6 +92,6 @@
     <div class="stars"></div>
     <div class="twinkling"><div>
     <!-- Navbar JS -->
-    <script src="/js/navbar.js"></script>
+    <script src="../js/navbar.js"></script>
 </body>
 </html>
