--- a/html/review.html
+++ b/html/review.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!--- NavBar -->
-    <header>
+    <header id="head-head">
         <div class="logo">Kunwar Shaanjeet</div>
         <nav id="toggler">
             <ul>
@@ -64,6 +64,9 @@
         <table class="table-content">
             <thead class="table-head">
                 <tr>
+                    <th colspan="4" id="thead-first">Review</th>
+                </tr>
+                <tr id="thead-second">
                     <th>Name</th>
                     <th>Skill</th>
                     <th>Rating</th>
