--- a/html/contact.html
+++ b/html/contact.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <!--- NavBar -->
-    <header>
+    <header id="head-head">
         <div class="logo">Kunwar Shaanjeet</div>
         <nav id="toggler">
             <ul>
