--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <!--- NavBar -->
-    <header>
+    <header id="head-head">
         <div class="logo">Kunwar Shaanjeet</div>
         <nav id="toggler">
             <ul>
